# rustex

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  INSTALL.md  LICENSE  README.md  config.example.yaml  install.sh
.github/workflows/: main.yaml  tests.yaml
src/: config.rs  discord.rs  main.rs  monitor.rs
