[package]
name = "rustex"
version = "1.0.0"
edition = "2024"
readme = "README.md"
rust-version = "1.85.1"
homepage = "https://github.com/stenstromen/rustex"
repository = "https://github.com/stenstromen/rustex"
description = "A simple Rust application that monitors files for changes and sends them to a Discord webhook."

[dependencies]
chrono = "0.4.40"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.10.0"
