[package]
name = "rustex"
version = "1.0.9"
edition = "2024"
readme = "README.md"
rust-version = "1.90.0"
homepage = "https://github.com/stenstromen/rustex"
repository = "https://github.com/stenstromen/rustex"
description = "A simple Rust application that monitors files for changes and sends them to a Discord webhook."

[dependencies]
chrono = "0.4.42"
regex = "1.12.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3.23.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
